--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,3 +213,24 @@ a:hover{
     font-size: 15px;
     text-decoration: none;
 }
+
+
+.success {
+    background: rgba(108, 192, 112, 0.7);
+    color: #fff;
+    width: 70%;
+    text-align: center;
+    padding: 10px 10px;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.error {
+    background: rgba(255, 102, 51, 0.7);
+    color: #fff;
+    width: 70%;
+    text-align: center;
+    padding: 10px 10px;
+    margin-top: 20px;
+    width: 100%;
+}
