--- a/views/trade/trade.ejs
+++ b/views/trade/trade.ejs
@@ -18,17 +18,25 @@
       <li class="list-group-item"><%= trade.feature1%></li>
       <li class="list-group-item"><%= trade.feature2%></li>
       <li class="list-group-item"><%= trade.feature3%></li>
+      <li class="list-group-item">
+        <h4>Posted By</h4>
+      </li>
+      <li class="list-group-item"><%= trade.author.firstName + ' ' + trade.author.lastName%></li>
     </ul>
     <div class="card-body">
+      <%if(user != trade.author._id){%>
       <a href="/trades" class="card-link">Trade Now</a>
       <a href="/trades" class="card-link">Rate It</a>
+      <%}%>
       <!-- This is to edit delete -->
       <br>
       <br>
+      <%if(user == trade.author._id){%>
       <form action="">
         <button type="submit" formmethod="POST" formaction="/trades/<%= trade.id%>?_method=DELETE" class="btn btn-light mb-2 addDelete">Delete</button>
         <button type="submit" formmethod="GET" formaction="/trades/<%= trade.id%>/edit" class="btn btn-light mb-2 addDelete">Edit</button>
       </form>
+      <%}%>
       <!-- <form action="">
         <button type="submit" class="btn btn-light mb-2 addDelete">Delete</button>
       </form> -->
